--- a/.github/workflows/check_project.yml
+++ b/.github/workflows/check_project.yml
@@ -5,6 +5,7 @@ on: push
 
 jobs:
   build:
-    make setup:
-    make test:
-    make lint:
+    steps:
+      make setup:
+      make test:
+      make lint:
