--- a/.github/workflows/check_project.yml
+++ b/.github/workflows/check_project.yml
@@ -7,6 +7,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+
       - name: Install dependencies
         run: make setup
 
