--- a/.github/workflows/check_project.yml
+++ b/.github/workflows/check_project.yml
@@ -11,6 +11,9 @@ jobs:
 
       - uses: actions/setup-node@v4
 
+      - name: Print Hello from Hexlet
+        uses: hexlet-components/hello-from-hexlet-action@release
+
       - name: Install dependencies
         run: make setup
 
